Test framework implementation docs wip

--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -7,25 +7,25 @@
 @misc{SpringBoot,
 	author       = {{Spring}},
 	howpublished = {\url{https://spring.io/projects/spring-boot}},
-	title        = {Spring Boot (01/12/2021)},
+	title        = {Spring {B}oot (01/12/2021)},
 }
 
 @misc{SpringDataJPA,
 	author       = {{Spring}},
 	howpublished = {\url{https://spring.io/projects/spring-data-jpa}},
-	title        = {Spring Data JPA (01/12/2021)},
+	title        = {Spring {D}ata {JPA} (01/12/2021)},
 }
 
 @misc{JMS,
 	author       = {{Oracle}},
 	howpublished = {\url{https://www.oracle.com/java/technologies/java-message-service.html}},
-	title        = {Java Message Service (JMS) (01/12/2021)},
+	title        = {Java {M}essage {S}ervice ({JMS}) (01/12/2021)},
 }
 
 @misc{JMSGuide,
 	author       = {{Spring}},
 	howpublished = {\url{https://spring.io/guides/gs/messaging-jms/}},
-	title        = {Messaging with JMS (01/12/2021)},
+	title        = {Messaging with {JMS} (01/12/2021)},
 }
 
 @misc{ThesisRepo,
@@ -43,13 +43,25 @@
 @misc{ActiveMQ,
 	author       = {{Apache}},
 	howpublished = {\url{https://activemq.apache.org/}},
-	title        = {Apache ActiveMQ (02/12/2021)},
+	title        = {Apache {A}ctive{MQ} (02/12/2021)},
 }
 
 @misc{MySQL,
 	author       = {{Oracle}},
 	howpublished = {\url{https://www.mysql.com/}},
-	title        = {MySQL (02/12/2021)},
+	title        = {My{SQL} (02/12/2021)},
+}
+
+@misc{EKS,
+	author       = {{Amazon Web Services}},
+	howpublished = {\url{https://aws.amazon.com/eks/}},
+	title        = {Amazon {E}lastic {K}ubernetes {S}ervice ({EKS}) (08/12/2021)},
+}
+
+@misc{Click,
+	author       = {{Pallets}},
+	howpublished = {\url{https://click.palletsprojects.com/en/8.0.x/}},
+	title        = {Click (08/12/2021)},
 }
 
 
