--- a/docs/content/background.tex
+++ b/docs/content/background.tex
@@ -54,7 +54,7 @@
 
 
 %----------------------------------------------------------------------------
-\subsection{Dependability Metrics - Mean values}
+\subsection{Dependability Metrics - Mean values} \label{background-dep-metrics-mean-values}
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
@@ -80,7 +80,7 @@ or Mean Time to Repair
 
 
 %----------------------------------------------------------------------------
-\subsection{Dependability Metrics - Probability functions}
+\subsection{Dependability Metrics - Probability functions} \label{background-dep-metrics-prob-funcs}
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
