--- a/docs/content/enhancements.tex
+++ b/docs/content/enhancements.tex
@@ -8,6 +8,7 @@
 
 \begin{itemize}
 	\item possibilities to enhance dependability - in which layers of the deployment (infr, K8s definition, application, using 3rd party technologies)
+	\item CI/CD pipeline changes
 \end{itemize}
 
 %----------------------------------------------------------------------------
